<?xml version="1.0"?>
<package format="2">
  <name>LidarToolkit</name>
  <version>0.0.0</version>
  <description>Simple lidar processing utilities (example package)</description>
  <maintainer email="you@example.com">maintainer</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>pcl_conversions</depend>

  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>ament_index_python</exec_depend>
  <exec_depend>rviz2</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

  <!-- runtime / build dependencies can be added here if needed -->

</package>
